--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "firebase": "^7.6.1",
+    "material-ui-phone-number": "^2.2.5",
+    "material-ui-snackbar-provider": "^1.3.1",
+    "mui-layout": "^1.2.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-navigation": "^4.0.10",
     "react-redux": "^7.1.3",
     "react-responsive-image": "^5.0.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-xmasonry": "^3.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
