--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mui-layout": "^1.2.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.5",
     "react-navigation": "^4.0.10",
     "react-redux": "^7.1.3",
     "react-responsive-image": "^5.0.0",
